--- a/src/css/common.css
+++ b/src/css/common.css
@@ -10,9 +10,40 @@ body {
   background-color: #fafafa;
   color: #212121;
   line-height: 1.5;
+  text-align: center;
+
 }
 
 img {
   display: block;
   max-width: 100%;
+}
+
+.timer{
+  display: flex;
+  justify-content: center;
+  margin-top: 60px;
+  background-color: #c8e9c3;
+  width: 80vw;
+  margin-right: auto;
+  margin-left: auto;
+
+}
+
+.field{
+  width: 200px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+}
+.label{
+  color: darkgreen;
+  font-size: 48px;
+
+}
+
+.value{
+  color: yellowgreen;
+  font-size: 78px;
+  font-weight: 700;
 }
